plugins {
    id 'java'
}

group = 'dev.harimohan'
version = '1.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    spring_version = '7.0.6'
    log4j_version = '2.25.4'
    jsoup_version = '1.22.1'
    json_simple_version = '1.1.1'
    commons_io_version = '2.21.0'
    httpcomponents_version = '5.6'
    jakarta_annotation_version = '3.0.0'

    junit_version = '5.14.3'
    mockito_version = '5.23.0'
}

dependencies {
    implementation "org.jsoup:jsoup:$jsoup_version"
    implementation "org.springframework:spring-core:$spring_version"
    implementation "org.springframework:spring-context:$spring_version"
    implementation "commons-io:commons-io:$commons_io_version", "commons-io:commons-io:$commons_io_version"
    implementation "org.apache.httpcomponents.client5:httpclient5:$httpcomponents_version"
    implementation "org.apache.logging.log4j:log4j-api:$log4j_version"
    implementation "org.apache.logging.log4j:log4j-core:$log4j_version"
    implementation "org.apache.logging.log4j:log4j-slf4j-impl:$log4j_version"
    implementation("com.googlecode.json-simple:json-simple:$json_simple_version") {
        exclude group: 'junit', module: 'junit'
    }
    implementation "jakarta.annotation:jakarta.annotation-api:$jakarta_annotation_version"

    testImplementation platform("org.junit:junit-bom:$junit_version")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testImplementation "org.mockito:mockito-core:$mockito_version"
    testImplementation "org.mockito:mockito-junit-jupiter:$mockito_version"
}

test {
    useJUnitPlatform()
}
